<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HealthSites</string>
    <string name="title_textView">Tap the screen</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_log_in">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registerAccount">Sign up</string>
    <string name="question">Don\'t have an account?</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_healthsites">My HealthSites</string>
    <string name="sign_up_nickname">NickName</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_male">Male</string>
    <string name="sign_up_female">Female</string>
    <string name="sign_up_gender">Gender:</string>
    <string name="sign_up_age">Age</string>
    <string name="sign_up_terms"><![CDATA[By signing up, you agree to our\n Terms & Privacy Policy.]]></string>
    <string name="editprofile_terms"><![CDATA[By updating profile, you agree to our\nTerms & Privacy Policy.]]></string>
    <string name="settings">Settings</string>
    <string name="myhealthsites">My HealthSites</string>
    <string name="refresh_map">Refresh Map</string>
    <string name="connection_lost">Lost connection</string>
    <string name="reconnected_wifi">Wi-Fi reconnected.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="permission_rationale_location">Access to the location service is required.</string>
    <string name="location_permission_denied">This app requires location permission. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
    <string name="permission_required_toast">Permission is required.</string>
    <string name="permission_rationale_camera">Access to the camera service is required.</string>
    <string name="camera_permission_denied">This app requires camera permission to get a new profile picture. Please try again and grant access to use the camera.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="sign_up_ownername">Owner Name</string>
    <string name="sign_up_companyCIF">Company CIF</string>
    <string name="sign_up_address">HealthSite Address</string>
    <string name="pickplace">Pick a Place</string>
    <string name="selectimage">Select Image</string>
    <string name="detail_text">Place id: %1$s\nName: %2$s\nAddress: %3$s\nPhone: %4$s\n\n%5$s</string>
    <string name="incorrect_place_resultcode">ResultCode Incorrect on SelectPlace</string>
    <string name="post">Post</string>
    <string name="user_interaction_cancelled">User intereaction was cancelled. Ops!</string>
    <string name="settings_inadequate">Location settings are inadequate</string>
    <string name="place_picked">Place Picked</string>
    <string name="sign_up_description_post">Post Description</string>
    <string name="help">Help</string>
    <string name="register">Register</string>
    <string name="msg_token_fmt">token message</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="modify_email">Modify your email</string>
    <string name="modify_password">Modify your password</string>
    <string name="title_post">Title</string>
    <string name="join_our_community">Join our Community</string>
    <string name="join_us">Join Us</string>
    <string name="moreInfo_terms_policy"><![CDATA[For more information take a look at our\nTerms & Privacy Policy]]></string>
    <string-array name="pref_theme_entries">
        <item>Light</item>
        <item>DarK</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>darK</item>
    </string-array>
    <string-array name="pref_map_style_entries">
        <item>Default</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_map_style_values">
        <item>default</item>
        <item>dark</item>
    </string-array>
    <string-array name="pref_map_view_entries">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>
    <string-array name="pref_map_view_values">
        <item>normal</item>
        <item>satellite</item>
        <item>hybrid</item>
        <item>terrain</item>
    </string-array>
    <string-array name="pref_language_entries" >
        <item>English</item>
        <item>Spanish</item>
        <item>Catalan</item>
        <item>From my device</item>
    </string-array>
    <string-array name="pref_language_values" >
        <item>en</item>
        <item>es</item>
        <item>ca</item>
        <item />
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registering">Registering</string>
    <string name="go_back">Go Back</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="follow">Follow</string>
    <string name="properties">Properties</string>
    <string name="contact">Contact</string>
    <string name="signing_up">Signing up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="company_data">Company Data</string>
    <string name="this_will_help_us_to_verify_the_site">This will help us to verify the site</string>
    <string name="company_name">Company Name</string>
    <string name="company_cif">Company CIF</string>
    <string name="next">Next</string>
    <string name="new_healthsite">New HealthSite</string>
    <string name="we_need_your_help_to_build_our_database_of_healthsites">We need your help to build our database of healthsites</string>
    <string name="get_started">Get Started</string>
    <string name="company_contact">Company Contact</string>
    <string name="help_others_to_find_you_in_multiple_ways">Help others to find you in multiple ways</string>
    <string name="website">Website</string>
    <string name="web_mail">Web mail</string>
    <string name="phone_number">Phone number</string>
    <string name="healthsite_data">HealthSite Data</string>
    <string name="name">Name</string>
    <string name="slogan">Slogan</string>
    <string name="healthsite_definition">HealthSite Definition</string>
    <string name="is_a_place_where_i_can_buy_food_and_or_drinks">Is a place where I can buy food and/or drinks?</string>
    <string name="store">Store</string>
    <string name="is_a_place_where_i_can_eat">Is a place where I can eat?</string>
    <string name="restaurant_food_service">Restaurant / Food service</string>
    <string name="this_categories_will_help_us_to_categorize_nthe_site_according_its_services">This categories will help us to categorize\nthe site according its services</string>
    <string name="add_a_place_and_a_representative_image">Add a place and a representative image</string>
    <string name="healthsite_properties">HealthSite Properties</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ecologic">Ecologic</string>
    <string name="free_gluten">Free Gluten</string>
    <string name="free_lactose">Free Lactose</string>
    <string name="select_the_properties_that_will_define_the_site_attributes_nfor_instance_the_site_has_vegan_offerings">Select the properties that will define the site attributes.\nFor instance, the site has \'vegan\' offerings</string>
    <string name="finishing_the_register">Finishing the register</string>
    <string name="thank_you_for_believing_in_this_project">Thank you for believing in this project</string>
    <string name="custom">Custom</string>
    <string name="enter_your_gender">Enter your gender</string>
    <string name="what_gender_are_you">What gender are you?</string>
    <string name="feel_free_to_choose_even_you_can_use_the_custom_option">Feel free to choose, even you can use the custom option</string>
    <string name="providing_your_gender_helps_us_to_improve_our_application_experience">Providing your gender helps us to improve our application experience</string>
    <string name="join_healthsites">Join HealthSites</string>
    <string name="we_ll_help_you_create_an_account_in_a_few_easy_steps">We\'ll help you create an account in a few easy steps.</string>
    <string name="language">Language</string>
    <string name="preference_language_summary">There are two ways of changing the app\'s language. Using this inner app preference, or by your mobile device language</string>
    <string name="keep_me_logged">Keep me logged in</string>
    <string name="preference_keep_me_logged">if enabled will mantain you logged in when you quit the app.</string>
    <string name="send_feedback">Send feedback</string>
    <string name="preference_send_feedback_summary">Helps us improve our application an its user experience by sending anonymous data, always transparent for you</string>
    <string name="preference_website_summary">To get more information visit healthsites.info</string>
    <string name="log_out">Log out</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="change_username">Change username</string>
    <string name="preference_change_username_summary">Modify your username</string>
    <string name="share">Share</string>
    <string name="preference_share_summary">Let other people know about this site</string>
    <string name="report">Report</string>
    <string name="preference_report_summary">Send us a notification to report this site, if you consider it\'s inadequate</string>
    <string name="map_style">Map style</string>
    <string name="preference_map_style_summary">Set your default style for your map</string>
    <string name="map_view">Map view</string>
    <string name="preference_map_view_summmary">Set your default view for your map</string>
    <string name="hide_my_location_button">Hide My Location Button</string>
    <string name="preference_hide_my_location_button_summary">Hide my location button on the top right</string>
    <string name="show_zoom_controls">Show zoom controls</string>
    <string name="preference_show_zoom_controls_summary">Set visible the zoom controls</string>
    <string name="enable_location_updates">Enable location updates</string>
    <string name="preference_enable_location_updates">The camera will follow you through the map</string>
    <string name="customization">Customization</string>
    <string name="configuration">Configuration</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact us</string>
    <string name="support">Support</string>
</resources>