<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="50dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/healthsite_properties"
        android:textSize="30sp"
        android:textColor="@color/colorGreenDark"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/add_healthsite_properties_title"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/properties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/add_healthsite_properties_title">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="25dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegan"
                android:textSize="18sp"
                android:buttonTint="@color/colorGreenDark"
                android:layout_marginRight="20dp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_vegetarian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetarian"
                android:textSize="18sp"
                android:buttonTint="@color/colorGreenDark"
                android:layout_marginRight="20dp"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_ecologic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ecologic"
                android:buttonTint="@color/colorGreenDark"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_free_gluten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_gluten"
                android:textSize="18sp"
                android:buttonTint="@color/colorGreenDark"
                android:layout_marginRight="20dp"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_free_lactose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_lactose"
                android:textSize="18sp"
                android:buttonTint="@color/colorGreenDark"
                android:layout_marginRight="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_add_healhtsite_properties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="top"
        android:textAllCaps="false"
        android:enabled="false"
        android:alpha="0.3"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/properties"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_healthsite_properties_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_the_properties_that_will_define_the_site_attributes_nfor_instance_the_site_has_vegan_offerings"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_next_add_healhtsite_properties"/>

</androidx.constraintlayout.widget.ConstraintLayout>