<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="top">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:textSize="30sp"
        android:textColor="@color/colorGreenDark"
        android:gravity="center_horizontal"
        android:text="@string/finishing_the_register"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:text="@string/thank_you_for_believing_in_this_project"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_btn_text_size"
        android:textStyle="normal"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/register_subtitle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moreInfo_terms_policy"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_register"/>


</androidx.constraintlayout.widget.ConstraintLayout>